# goofish-monitor

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt  start.sh
backend/app/: __init__.py  ai.py  auth.py  browser.py  main.py  models.py  notifier.py  runtime_logs.py  scheduler.py  storage.py  terminal_qr.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: main.tsx  styles.css
