[project]
name = "ai-goofish-monitor"
version = "0.1.0"
description = "A typed FastAPI and React monitor for Xianyu/Goofish searches with AI scoring."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "httpx>=0.27.0",
  "playwright>=1.45.0",
  "pillow>=10.4.0",
]

[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["backend*"]
exclude = ["frontend*", "data*"]

[project.optional-dependencies]
dev = [
  "mypy>=1.10.0",
  "ruff>=0.5.0",
]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = []

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PTH"]
